Correct alignment of cards, responsive improvement

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -8,6 +8,9 @@
   min-width: 25vh;
   max-width: 25vh;
   transition: transform 0.4s box-shadow 0.3s ease;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  margin-left: 4vh;
 }
 
 .myDiv:hover {
@@ -59,7 +62,9 @@
     padding: unset;
     min-width: 15vh;
     max-width: 15vh;
-    height: 25vh;
+    height: 22vh;
+    margin-bottom: 10px;
+    margin-left: 5px;
   }
 
   .title {
