--- a/src/components/Favorites/Favorites.module.css
+++ b/src/components/Favorites/Favorites.module.css
@@ -1,20 +1,5 @@
-.container {
-  border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 10px;
-  animation: fade-in 0.5s ease-in-out forwards;
-}
 
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-    transform: scale(0.5);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
+
 
 .title {
   color: white;
