--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -9,8 +9,3 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   }
   
-
-.container {
-  display: flex;
-  flex-direction: column-reverse;
-}
